@@ -20,7 +20,6 @@ class PPD:
         init_area = self.log_pdf_coef.exp().integrate(0, 2*pi)
         self.log_pdf_coef[0] -= log(init_area) #Normalize so that area of one period is equal to one
         self.L = self.log_pdf_coef
-        self.time_range = (0, 2*pi)
         self.m = MomentCalculator(self)
 
     def __repr__(self):
